# video-ai

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
agent/: README.md  merge.py
analysis/: __main__.py  narrative.py  pipeline.py  pyproject.toml  scene_card.py  schema.py  store.py
analysis/analysis/: dedup.py
analysis/analysis/features/: clip_zeroshot.py  faces.py  fusion.py  quality.py  visual.py
analysis/features/: adaptive.py  audio.py  camera_motion.py  captions.py  depth.py  embeddings.py  pose.py  video_llm.py
analysis/src/analysis/: __main__.py  decision.py  pipeline.py  preprocess.py  scene_card.py  schema.py  scoring.py  segmentation.py  store.py
analysis/src/analysis/features/: _gpu.py  action.py  camera_motion.py  embeddings.py  objects.py  ocr.py  quality.py  saliency.py  shot_type.py  tracking.py  transcript.py  visual.py
backend/: Dockerfile  README.md  requirements.txt  run.ps1  run.sh
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/core/: decision.py  edit_plan.py  pipeline.py
backend/app/models/: edit_plan.py  features.py  segment.py
backend/app/services/: cache.py  ffmpeg.py  storage.py
backend/app/utils/: math.py  video.py
colab/: pipeline_test.ipynb
composer/: README.md
engine/: Cargo.toml
engine/src/: main.rs
eval/: README.md  nextqa.py
schemas/: edit_plan.json  segment_features.json
scripts/: set_space_secrets.py  smoke_test.py
videoqa/: __init__.py  app.py  ask.py  caption.py  cleanup.py  cli.py  detector.py  embed.py  frames.py  ingest.py  objects.py  store.py  transcribe.py  understand.py
videoqa/live/: __main__.py  captioner.py  constants.py  detector.py  director.py  edge_store.py  encoder.py  main.py  pipeline.py  projection.py  registry.py  session.py
videoqa/live/static/: app.js  index.html  style.css
