[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-ai-analysis"
version = "0.1.0"
description = "video-ai analysis pipeline (full)"
requires-python = ">=3.10,<3.13"
dependencies = [
  # core
  "numpy>=1.26",
  "opencv-python>=4.9",
  "scenedetect>=0.6.4",
  "tqdm>=4.66",
  "pandas>=2.1",
  "pyarrow>=15.0",
  "Pillow>=10.0",

  # audio
  "librosa>=0.10",
  "soundfile>=0.12",
  "webrtcvad>=2.0.10",
  "openai-whisper>=20231117",

  # vision DL stack
  "torch>=2.2",
  "torchvision>=0.17",
  "open_clip_torch>=2.24",
  "transformers>=4.40",
  "ultralytics>=8.1",
  "supervision>=0.21",
  "mediapipe>=0.10",
  "easyocr>=1.7",

  # backend (FastAPI service ships with package)
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-multipart>=0.0.9",
  "pydantic>=2.6",
]

[project.scripts]
analysis = "analysis.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["analysis*"]
exclude = ["backend*", "engine*", "agent*", "composer*", "storage*", "schemas*"]
